--- a/mongo-express/mongo-express-config.yaml
+++ b/mongo-express/mongo-express-config.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongo-express-config
-  namespace: user
 data:
-  ME_CONFIG_MONGODB_URL: "mongodb://user-mongo-0.user-mongo-service.user.svc.cluster.local:27017"
+  ME_CONFIG_MONGODB_URL: "mongodb://chat-mongo-0.chat-mongo-service.chat.svc.cluster.local:27017"
   ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
